# edgetech-couchdb-saver

./: CONTRIBUTING.md  README.md  couchdb-saver.env  docker-compose.yml  example.env
.github/workflows/: code-quality.yml  dockerbuild.yml  releasetag.yml
couchdb-saver/: Dockerfile  couchdb_saver.schema  couchdb_saver_pub_sub.py  pyproject.toml  requirements.txt
couchdbsaver/: Dockerfile  couchdb_saver.schema  couchdb_saver_pub_sub.py  requirements.txt
